--- a/css/styles.css
+++ b/css/styles.css
@@ -28,6 +28,8 @@ body {
 }
 .list {
   list-style: none;
+  padding: 0;
+  margin: 0;
 }
 .link {
   text-decoration: none;
@@ -35,6 +37,20 @@ body {
 .title {
   color: var(--title-text-color);
 }
+.container {
+  margin-left: auto;
+  margin-right: auto;
+  width: 1200px;
+  outline: 2px solid tomato;
+}
+h1,
+h2,
+h3,
+p,
+ul {
+  margin: 0;
+}
+
 /* навигация */
 .page-nav-list .link {
   color: var(--title-text-color);
@@ -75,8 +91,14 @@ body {
 .hero {
   background-color: #2f303a;
   text-align: center;
+  margin-bottom: 94px;
 }
 .hero-title {
+  margin-top: 0;
+  margin-bottom: 30px;
+  margin-left: auto;
+  margin-right: auto;
+  width: 696px;
   font-weight: 900;
   font-size: 44px;
   line-height: 1.36;
@@ -85,6 +107,10 @@ body {
   color: #fff;
 }
 .hero-button {
+  border-radius: 4px;
+  padding: 10px 32px;
+  min-width: 200px;
+  text-align: center;
   font-family: inherit;
   background-color: var(--accent-color);
   font-weight: 700;
@@ -95,7 +121,11 @@ body {
   cursor: pointer;
 }
 /* преимущества */
+.advantages {
+  margin-bottom: 94px;
+}
 .advantages .title {
+  margin-bottom: 10px;
   font-weight: 700;
   font-size: 14px;
   line-height: 1.14;
@@ -106,9 +136,22 @@ body {
   line-height: 1.71;
 }
 /* чем мы занимаемся и команда*/
+.possibilities {
+  margin-bottom: 94px;
+}
+.possibilities-title {
+  margin-bottom: 50px;
+}
 .team {
   background-color: #f5f4fa;
+  padding-top: 94px;
+  padding-bottom: 94px;
 }
+.team-title {
+  /* margin-top: 94px; */
+  margin-bottom: 50px;
+}
+
 .possibilities-title,
 .team-title {
   font-weight: 700;
@@ -151,7 +194,13 @@ footer .second-part-logo {
 }
 
 /* для портфолио */
+.portfolio {
+  margin-top: 94px;
+}
 .portfolio .button {
+  border-radius: 4px;
+  padding: 6px 22px;
+  min-width: 73px;
   font-family: inherit;
   font-weight: 500;
   font-size: 16px;
