--- a/css/styles.css
+++ b/css/styles.css
@@ -174,6 +174,8 @@ ul {
 /* футер */
 footer {
   background-color: #2f303a;
+  padding-bottom: 60px;
+  padding-top: 60px;
 }
 .page-address {
   font-style: normal;
@@ -197,6 +199,9 @@ footer .second-part-logo {
 .portfolio {
   margin-top: 94px;
   margin-bottom: 94px;
+}
+.filters {
+  margin-bottom: 34px;
 }
 .portfolio .button {
   border-radius: 4px;
