--- a/css/styles.css
+++ b/css/styles.css
@@ -50,6 +50,10 @@ p,
 ul {
   margin: 0;
 }
+.section {
+  padding-top: 94px;
+  padding-bottom: 94px;
+}
 
 /* навигация */
 .page-nav-list .link {
@@ -91,7 +95,6 @@ ul {
 .hero {
   background-color: #2f303a;
   text-align: center;
-  margin-bottom: 94px;
 }
 .hero-title {
   margin-top: 0;
@@ -121,9 +124,7 @@ ul {
   cursor: pointer;
 }
 /* преимущества */
-.advantages {
-  margin-bottom: 94px;
-}
+
 .advantages .title {
   margin-bottom: 10px;
   font-weight: 700;
@@ -137,18 +138,16 @@ ul {
 }
 /* чем мы занимаемся и команда*/
 .possibilities {
-  margin-bottom: 94px;
+  padding-top: 0;
 }
 .possibilities-title {
   margin-bottom: 50px;
 }
 .team {
   background-color: #f5f4fa;
-  padding-top: 94px;
-  padding-bottom: 94px;
 }
+
 .team-title {
-  /* margin-top: 94px; */
   margin-bottom: 50px;
 }
 
@@ -160,6 +159,7 @@ ul {
   text-align: center;
 }
 .team-list .title {
+  margin-bottom: 10px;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.18;
@@ -196,10 +196,6 @@ footer .second-part-logo {
 }
 
 /* для портфолио */
-.portfolio {
-  margin-top: 94px;
-  margin-bottom: 94px;
-}
 .filters {
   margin-bottom: 34px;
 }
