--- a/css/styles.css
+++ b/css/styles.css
@@ -160,7 +160,12 @@ ul {
   cursor: pointer;
 }
 /* преимущества */
-
+.advantages-list {
+  display: flex;
+}
+.advantages-list .item:not(:last-child) {
+  margin-right: 30px;
+}
 .advantages .title {
   margin-bottom: 10px;
   font-weight: 700;
@@ -173,11 +178,26 @@ ul {
   line-height: 1.71;
 }
 /* чем мы занимаемся и команда*/
+.possibilities-list {
+  display: flex;
+}
+.possibilities-list .item:not(:last-child) {
+  margin-right: 30px;
+}
 .possibilities {
   padding-top: 0;
 }
+.possibilities-list img {
+  vertical-align: bottom;
+}
 .possibilities-title {
   margin-bottom: 50px;
+}
+.team-list {
+  display: flex;
+}
+.team-list .item:not(:last-child) {
+  margin-right: 30px;
 }
 .team {
   background-color: #f5f4fa;
@@ -195,6 +215,7 @@ ul {
   text-align: center;
 }
 .team-list .title {
+  margin-top: 30px;
   margin-bottom: 10px;
   font-weight: 500;
   font-size: 16px;
@@ -202,6 +223,7 @@ ul {
   text-align: center;
 }
 .team-list .profession {
+  margin-bottom: 30px;
   font-size: 16px;
   line-height: 1.18;
   text-align: center;
@@ -232,8 +254,16 @@ footer .second-part-logo {
 }
 
 /* для портфолио */
+.portfolio-filter {
+  display: flex;
+  justify-content: center;
+}
+.portfolio-filter .item:not(:last-child) {
+  margin-right: 8px;
+}
 .filters {
   margin-bottom: 34px;
+  height: 54px;
 }
 .portfolio .button {
   border-radius: 4px;
@@ -253,9 +283,28 @@ footer .second-part-logo {
   background-color: var(--accent-color);
   color: var(--hover-text);
 }
+.portfolio-list img {
+  vertical-align: bottom;
+}
+.portfolio-list {
+  display: flex;
+  flex-wrap: wrap;
+}
+.portfolio-list .item {
+  width: 370px;
+  margin-right: 30px;
+  margin-bottom: 30px;
+}
+.portfolio-list .item:nth-child(3n) {
+  margin-right: 0;
+}
+.portfolio-list .item:nth-last-child(-n + 3) {
+  margin-bottom: 0;
+}
 .portfolio .title {
   margin-bottom: 4px;
   margin-top: 20px;
+  margin-left: 24px;
 
   font-weight: 700;
   font-size: 18px;
@@ -264,6 +313,7 @@ footer .second-part-logo {
 }
 .portfolio .description {
   margin-bottom: 20px;
+  margin-left: 24px;
   font-size: 16px;
   line-height: 1.87;
 }
