--- a/css/styles.css
+++ b/css/styles.css
@@ -43,7 +43,7 @@ body {
   width: 1200px;
   padding-right: 15px;
   padding-left: 15px;
-  outline: 2px solid tomato;
+  /* outline: 2px solid tomato; */
 }
 h1,
 h2,
