--- a/css/styles.css
+++ b/css/styles.css
@@ -61,6 +61,7 @@ ul {
 .page .container {
   display: flex;
   align-items: center;
+  border-bottom: 1px solid #ececec;
 }
 .page-nav {
   display: flex;
@@ -295,6 +296,11 @@ footer .second-part-logo {
   margin-right: 30px;
   margin-bottom: 30px;
 }
+.bottom-part {
+  border: 1px solid #eeeeee;
+  border-top: 0;
+  padding-top: 20px;
+}
 .portfolio-list .item:nth-child(3n) {
   margin-right: 0;
 }
@@ -303,7 +309,7 @@ footer .second-part-logo {
 }
 .portfolio .title {
   margin-bottom: 4px;
-  margin-top: 20px;
+  /* margin-top: 20px; */
   margin-left: 24px;
 
   font-weight: 700;
